[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/enemies/topD.png" type="Texture" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://AttackBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mob_Attack.gd" type="Script" id=5]
[ext_resource path="res://Chasing.gd" type="Script" id=6]
[ext_resource path="res://StateMachine.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.2847, 21.3338 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.59799, 6.11826 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.8548, 22.4087 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.991, 22.36 )

[sub_resource type="Animation" id=6]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Slash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 20, 21, 22, 23 ]
}

[node name="Mob" type="KinematicBody2D"]
position = Vector2( 480.049, 256.478 )
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.4852, -1.21518 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.101961, 0.101961, 1 )
rotation = -1.5708
texture = ExtResource( 1 )
hframes = 5
vframes = 8
frame = 34

[node name="HurtBox" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -9.15527e-05, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HurtBox"]
position = Vector2( 1.50079, 1.87073 )
scale = Vector2( 3.19244, 3.22576 )
shape = SubResource( 2 )

[node name="AttackBox" parent="Sprite" instance=ExtResource( 4 )]
position = Vector2( 1.57027, 28.1488 )
scale = Vector2( 1.59969, 0.287892 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackBox"]
position = Vector2( 0.00119019, -0.0862732 )
shape = SubResource( 3 )
disabled = true

[node name="Sensor" type="Area2D" parent="Sprite/AttackBox"]
position = Vector2( 0.13504, -0.5401 )

[node name="SensorBox" type="CollisionShape2D" parent="Sprite/AttackBox/Sensor"]
position = Vector2( 0.18988, 0.67511 )
shape = SubResource( 4 )

[node name="Slash" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 1.8903, 36.1853 )
texture = ExtResource( 1 )
hframes = 5
vframes = 8
frame = 37

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
initial_state = NodePath("Chasing")

[node name="Mob_Attack" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Chasing" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walk"
anims/Attack = SubResource( 6 )
anims/Walk = SubResource( 5 )

[connection signal="on_take_damage" from="Sprite/HurtBox" to="." method="_on_HurtBox_on_take_damage"]
[connection signal="body_entered" from="Sprite/AttackBox/Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Sprite/AttackBox/Sensor" to="." method="_on_Sensor_body_exited"]
